@@ -7,6 +7,11 @@ else:
     from urllib.parse import parse_qsl
 
 try:
+    from requests.packages.urllib3.util.url import parse_url
+except ImportError:
+    from urllib3.util.url import parse_url
+
+try:
     from json.decoder import JSONDecodeError
 except ImportError:
     JSONDecodeError = ValueError
@@ -133,6 +138,35 @@ def query_param_matcher(params):
             reason = "Parameters do not match. {} doesn't match {}".format(
                 _create_key_val_str(request_params_dict),
                 _create_key_val_str(params_dict),
+            )
+
+        return valid, reason
+
+    return match
+
+
+def query_string_matcher(query):
+    """
+    Matcher to match query string part of request
+
+    :param query: (str), same as constructed by request
+    :return: (func) matcher
+    """
+
+    def match(request):
+        reason = ""
+        data = parse_url(request.url)
+        request_query = data.query
+
+        request_qsl = sorted(parse_qsl(request_query))
+        matcher_qsl = sorted(parse_qsl(query))
+
+        valid = not query if request_query is None else request_qsl == matcher_qsl
+
+        if not valid:
+            reason = "Query string doesn't match. {} doesn't match {}".format(
+                _create_key_val_str(dict(request_qsl)),
+                _create_key_val_str(dict(matcher_qsl)),
             )
 
         return valid, reason
